5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1679_1100.log
== TEST (2019-05-02 01:26:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula =  int(input("Valor da cedula: )

if(cedula == 2)
	print("Animal: Tartaruga")
elif(cedula == 5)
	print("Animal: Garca")
-- ERROR:
File "XXXX", line 5
    cedula =  int(input("Valor da cedula: )
                                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:27:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula =  int(input("Valor da cedula: ")

if(cedula == 2)
	print("Animal: Tartaruga")
elif(cedula == 5)
	print("Animal: Garca")
-- ERROR:
File "XXXX", line 8
    print("Animal: Tartaruga")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:28:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula =  int(input("Valor da cedula: ")

if(cedula == 2):
	print("Animal: Tartaruga")
elif(cedula == 5):
	print("Animal: Garca")
-- ERROR:
File "XXXX", line 7
    if(cedula == 2):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:29:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula =  int(input("Valor da cedula: ")

if(cedula == 2):
	print("Animal: Tartaruga")
elif(cedula == 5):
	print("Animal: Garca")
-- ERROR:
File "XXXX", line 7
    if(cedula == 2):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:31:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Valor da cedula: "))

if(cedula == 2):
	print("Animal: Tartaruga")
elif(cedula == 5):
	print("Animal: Garca")
-- ERROR:
File "XXXX", line 7
    if(cedula == 2):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:33:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Valor da cedula: "))

print("Entrada:", cedula)

if(cedula == 2):
	print("Animal: Tartaruga")
elif(cedula == 5):
	print("Animal: Garca")
eli
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    eli
NameError: name 'eli' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:33:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Valor da cedula: "))

print("Entrada:", cedula)

if(cedula == 2):
	print("Animal: Tartaruga")
elif(cedula == 5):
	print("Animal: Garca")
-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:40:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Valor da cedula: "))

print("Entrada:", cedula)

if(cedula == 2):
	print("Animal: Tartaruga")
elif(cedula == 5):
	print("Animal: Garca")
elif(cedula == 10)
	print("Animal: Arara")
elif(cedula == 20)
	print("Animal: Mico-leao-dourado")
elif(cedula == 50)
	print("Animal: Onca-pintada")
elif(cedula == 100)
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- ERROR:
File "XXXX", line 13
    elif(cedula == 10)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:41:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Valor da cedula: "))

print("Entrada:", cedula)

if(cedula == 2):
	print("Animal: Tartaruga")
elif(cedula == 5):
	print("Animal: Garca")
elif(cedula == 10):
	print("Animal: Arara")
elif(cedula == 20):
	print("Animal: Mico-leao-dourado")
elif(cedula == 50):
	print("Animal: Onca-pintada")
elif(cedula == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:41:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Valor da cedula: "))

print("Entrada:", cedula)

if(cedula == 2):
	print("Animal: Tartaruga")
elif(cedula == 5):
	print("Animal: Garca")
elif(cedula == 10):
	print("Animal: Arara")
elif(cedula == 20):
	print("Animal: Mico-leao-dourado")
elif(cedula == 50):
	print("Animal: Onca-pintada")
elif(cedula == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:41:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Valor da cedula: "))

print("Entrada:", cedula)

if(cedula == 2):
	print("Animal: Tartaruga")
elif(cedula == 5):
	print("Animal: Garca")
elif(cedula == 10):
	print("Animal: Arara")
elif(cedula == 20):
	print("Animal: Mico-leao-dourado")
elif(cedula == 50):
	print("Animal: Onca-pintada")
elif(cedula == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.156377
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:42:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = int(input("Valor da cedula: "))

print("Entrada:", cedula)

if(cedula == 2):
	print("Animal: Tartaruga")
elif(cedula == 5):
	print("Animal: Garca")
elif(cedula == 10):
	print("Animal: Arara")
elif(cedula == 20):
	print("Animal: Mico-leao-dourado")
elif(cedula == 50):
	print("Animal: Onca-pintada")
elif(cedula == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.150899
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
